--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=Great+Vibes&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
+
+@import url(general.css);
 @import url(fondo.css);
 @import url(header.css);
 @import url(home.css);
